--- a/source/index_en.html
+++ b/source/index_en.html
@@ -227,7 +227,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Applicable Time Period: <strong style="color: #db0011;">10/11 - 29/2/2024</strong></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Period: <strong style="color: #db0011;">10/11 - 29/2/2024</strong></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -289,7 +289,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Applicable Time Period: <strong style="color: #db0011;">7/11/2023 - 29/2/2024</strong></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Period: <strong style="color: #db0011;">7/11/2023 - 29/2/2024</strong></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -464,7 +464,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
                                                     <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_28.png" width="38" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When opening payroll  account and making your first salary transfer to your HSBC Account, from VND 6 million</td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When opening a payroll  account and making your first salary transfer to your HSBC Account, from VND 6 million</td>
                                                   </tr>
                                                 </table></td>
                                             </tr>
