--- a/source/index_en_1.html
+++ b/source/index_en_1.html
@@ -178,7 +178,7 @@
                                   <td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_16.png" width="27" height="auto" alt="" style="display:block"/></td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                       <tr>
-                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Samsung Z Fold5 Smartphone</strong></td>
+                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Samsung Galaxy Z Fold 5 Smartphone</strong></td>
                                       </tr>
                                     </table></td>
                                 </tr>
@@ -204,7 +204,7 @@
                                   <td width="30" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17.png" width="21" height="auto" alt="" style="display:block"/></td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                       <tr>
-                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Samsung S23 Ultra Smartphone</strong></td>
+                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Samsung Galaxy S23 Ultra Smartphone</strong></td>
                                       </tr>
                                     </table></td>
                                                                     <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td> 
@@ -259,7 +259,7 @@
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0 28px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Receive a deluxe trip for two to Japan, Singapore-Malaysia and Thailand as one of the <strong style="color: #db0011;">highest points accumulators each month</strong></td>
+                            <td align="center" style="margin: 0; padding: 0 28px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Receive a deluxe trip for two to Japan, Singapore - Malaysia and Thailand as one of the <strong style="color: #db0011;">highest points accumulators each month</strong></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
