--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -179,7 +179,7 @@
                                   <td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_16.png" width="27" height="auto" alt="" style="display:block"/></td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                       <tr>
-                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Điện thoại Samsung Z Fold5</strong> cao cấp</td>
+                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Điện thoại Samsung Galaxy Z Fold 5</strong> cao cấp</td>
                                       </tr>
                                     </table></td>
                                 </tr>
@@ -205,8 +205,7 @@
                                   <td width="30" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17.png" width="21" height="auto" alt="" style="display:block"/></td>
                                   <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                       <tr>
-                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Điện thoại Samsung S23 Ultra</strong><br />
-                                          thời thượng</td>
+                                        <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Điện thoại Samsung Galaxy S23 Ultra</strong> thời thượng</td>
                                       </tr>
                                     </table></td>
                                                                     <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td> 
