--- a/source/index_en_1.html
+++ b/source/index_en_1.html
@@ -225,7 +225,7 @@
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Period: <strong style="color: #db0011;">10/11 - 29/2/2024</strong></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Period: <strong style="color: #db0011;">10/11/2023- 29/2/2024</strong></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -454,7 +454,13 @@
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
                                                     <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="35" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When achieving total Eligible Spending per Month, from VND &lt;amount&gt;</td>
+													  <td width="8" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">&bull;</td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When achieving total Eligible Spending per Month, from VND &lt;amount&gt; for Monthly prize</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
+                                                    <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">&bull;</td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When achieving total Eligible Spending per Month, from VND &lt;amount&gt; for Grand prize</td>
                                                   </tr>
                                                 </table></td>
                                               <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
